# viso2

./: .gitignore  README.rst
libviso2/: CMakeLists.txt
libviso2/include/libviso2/: matcher.h  viso.h  viso_stereo.h
libviso2/libviso2/: CMakeLists.txt
libviso2/libviso2/src/: demo.cpp  filter.cpp  matcher.cpp  matrix.cpp  reconstruction.cpp  viso.cpp  viso_mono.cpp  viso_stereo.cpp
viso2/: CMakeLists.txt
viso2_ros/: CMakeLists.txt  package.xml
viso2_ros/cfg/: example.yaml  params.yaml
viso2_ros/include/: transform_odom.h
viso2_ros/launch/: stereo_odometer.launch  viso2.launch.py
viso2_ros/msg/: VisoInfo.msg
viso2_ros/src/: mono_odometer.cpp  odometer_base.h  odometry_params.h  stereo_odometer.cpp  stereo_processor.h  transform_odom.cpp  transform_odom_node.cpp
